syntax = "proto3";

package order;

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (OrderResponse);
    rpc GetOrder(GetOrderRequest) returns (OrderResponse);
    rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
}

message CreateOrderRequest {
    string customerId = 1;
    repeated OrderItem items = 2;
}

message GetOrderRequest {
    string orderId = 1;
}

message ListOrdersRequest {
    string customerId = 1;
}

message OrderItem {
    string productId = 1;
    int32 quantity = 2;
}

message OrderResponse {
    string orderId = 1;
    string customerId = 2;
    repeated OrderItem items = 3;
    string status = 4;
}

message ListOrdersResponse {
    repeated OrderResponse orders = 1;
}